<resources>
    <string name="app_name">StationeryManager</string>
    <string name="title_home">Home</string>
    <string name="title_printing">Services</string>
    <string name="title_stationery">Stationery</string>
    <string name="title_faxAndCalls">Fax And Calls</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_settings">Settings</string>
    <string name="date">Date</string>
    <string name="set_time">set Time</string>
    <string name="type">Type</string>
    <string name="add_expense">Add Expense</string>
    <string name="update_expense">Update Expense</string>
    <string name="repair">Repair</string>
    <string name="rent">Rent</string>
    <string name="legal">Legal</string>
    <string name="transport">Transport</string>
    <string name="other">Other</string>
    <string name="delete_the_selected_expense_type">Delete the selected Expense type</string>
    <string name="note">Note</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="tax">Tax</string>
    <string name="ads">Ads</string>
    <string name="electricity">Electricity</string>
    <string name="new_type">New Type</string>
    <string name="add">Add</string>
    <string name="update_the_selected_expense_type">Update the selected Expense Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="rs_2500_00">Rs. 2500.00</string>
    <string name="grid_image">Grid Image</string>
    <string name="labelTitle">Title</string>
    <string name="delete_alert">Are you sure want to delete the selected Item ?</string>


    <!--Stationery Management-->
    <string name="PAtxt1">Select Category</string>

    <string-array name="combo_box1">
        <item>Books</item>
        <item>Pens</item>
        <item>School Items</item>
        <item>Office Items</item>
    </string-array>

    <string-array name="expense_types">
        <item>Rent</item>
        <item>Repair</item>
        <item>Legal</item>
        <item>Transport</item>
        <item>Tax</item>
        <item>Ads</item>
        <item>Other</item>
    </string-array>

    <string name="PAtxt2">Product Name</string>
    <string name="PAtxt3">Product Code</string>
    <string name="PAtxt4">Cost Price</string>
    <string name="PAtxt5">Selling Price</string>
    <string name="PAtxt6">Quantity</string>
    <string name="PAbtn1">Add Products</string>
    <string name="PAbtn">Product list</string>
    <string name="set_date">Set Date</string>

    <string name="SAtxt1">Product Code</string>
    <string name="SAtxt2">Product Name</string>
    <string name="SAtxt3">Select Category</string>
    <string name="SAtxt4">Selling Price</string>
    <string name="SAtxt5">Quantity</string>
    <string name="SAtxt6">Select Date</string>
    <string name="SAbtn1">Add Sales</string>


    <string name="UPtxt2">Product Name</string>
    <string name="UPtxt3">Product Code</string>
    <string name="UPtxt4">Cost Price</string>
    <string name="UPtxt5">Selling Price</string>
    <string name="UPtxt6">Quantity</string>
    <string name="UPbtn1">Update Products</string>

    <string name="t1">BOOKS</string>
    <string name="t2">PENS</string>
    <string name="t3">SCHOOL ITEMS</string>
    <string name="t4">OFFICE ITEMS</string>
    <string name="btnNav1">Category</string>
    <string name="btnNav2">Sales</string>

    <string name="Bt1">Book Type 1</string>
    <string name="Bt2">Book Type 2</string>
    <string name="Bt3">Book Type 3</string>
    <string name="Bc1">Code 1</string>
    <string name="Bc2">Code 2</string>
    <string name="Bc3">Code 3</string>
    <string name="Cp1">Cost Price - Rs.150</string>
    <string name="Cp2">Cost Price - Rs.130</string>
    <string name="Cp3">Cost Price - Rs.100</string>
    <string name="Sp1">Selling Price - Rs.180</string>
    <string name="Sp2">Selling Price - Rs.150</string>
    <string name="Sp3">Selling Price - Rs.130</string>
    <string name="qty1">Qty - 20</string>
    <string name="qty2">Qty - 22</string>
    <string name="qty3">Qty - 15</string>

    <string name="Pt1">Pen Type 1</string>
    <string name="Pt2">Pen Type 2</string>
    <string name="Pt3">Pen Type 3</string>
    <string name="Pc1">Code 1</string>
    <string name="Pc2">Code 2</string>
    <string name="Pc3">Code 3</string>
    <string name="PCp1">Cost Price - Rs.15</string>
    <string name="PCp2">Cost Price - Rs.10</string>
    <string name="PCp3">Cost Price - Rs.16</string>
    <string name="PSp1">Selling Price - Rs.18</string>
    <string name="PSp2">Selling Price - Rs.15</string>
    <string name="PSp3">Selling Price - Rs.19</string>
    <string name="Pqty1">Qty - 80</string>
    <string name="Pqty2">Qty - 52</string>
    <string name="Pqty3">Qty - 75</string>

    <string name="Ot1">Item 1</string>
    <string name="Ot2">Item 2</string>
    <string name="Ot3">Item 3</string>
    <string name="Oc1">Code 1</string>
    <string name="Oc2">Code 2</string>
    <string name="Oc3">Code 3</string>
    <string name="OCp1">Cost Price - Rs.150</string>
    <string name="OCp2">Cost Price - Rs.90</string>
    <string name="OCp3">Cost Price - Rs.60</string>
    <string name="OSp1">Selling Price - Rs.180</string>
    <string name="OSp2">Selling Price - Rs.100</string>
    <string name="OSp3">Selling Price - Rs.75</string>
    <string name="Oqty1">Qty - 30</string>
    <string name="Oqty2">Qty - 22</string>
    <string name="Oqty3">Qty - 35</string>

    <string name="St1">Item 1</string>
    <string name="St2">Item 2</string>
    <string name="St3">Item 3</string>
    <string name="Sc1">Code 1</string>
    <string name="Sc2">Code 2</string>
    <string name="Sc3">Code 3</string>
    <string name="SCp1">Cost Price - Rs.150</string>
    <string name="SCp2">Cost Price - Rs.90</string>
    <string name="SCp3">Cost Price - Rs.60</string>
    <string name="SSp1">Selling Price - Rs.180</string>
    <string name="SSp2">Selling Price - Rs.100</string>
    <string name="SSp3">Selling Price - Rs.75</string>
    <string name="Sqty1">Qty - 30</string>
    <string name="Sqty2">Qty - 22</string>
    <string name="Sqty3">Qty - 35</string>

    <string name="SL1">Search by Date</string>
    <string name="SL2">Search by Category</string>
    <string name="SLt1">SALE 1</string>
    <string name="SLt2">SALE 2</string>

    <string name="net_expenes">Net Expenes</string>
    <string name="net_income">Net Income</string>
    <string name="net_profit">Net Profit</string>

    <string name="uptext1">Service Name</string>
    <string name="uptext2">Service Code</string>
    <string name="uptext3">Cost Price</string>
    <string name="uptext4">Selling Price</string>
    <string name="uptext5">Quantity</string>
    <string name="uptext6">Service Name</string>
    <string name="upbtn1">Update Service</string>


    <string name="textUp1">Service Type</string>
    <string name="textUp2">Description</string>
    <string name="textUp3">Cost Price</string>
    <string name="textUp4">Selling Price</string>
    <string name="textUp5">Quantity</string>
    <string name="btnup1">Update</string>


    <string name="SbtnNav1">Category</string>
    <string name="SbtnNav2">Sales</string>


    <string-array name="comboboxadd1">
        <item>Binding</item>
        <item>Laminating</item>
        <item>Photo Copy</item>
        <item>PrintOuts</item>
    </string-array>


    <string name="textsale2">Service Name</string>
    <string name="textsale3">Category</string>
    <string name="textsale4">Price</string>
    <string name="textsale5">Quantity</string>
    <string name="btnsale1">Add Sale</string>
    <string name="btnList">View</string>


    <string name="upperbtnCat">Category</string>
    <string name="upperbtnSale">Sales</string>

    <string name="dis1">Service Name</string>
    <string name="dis2">Date</string>
    <string name="dis3">Category</string>
    <string name="dis4">Price</string>
    <string name="dis5">Quantity</string>
    <string name="dis6">Profit</string>
    <string name="dis7">Service</string>
    <string name="dis8">Date</string>
    <string name="dis9">Category</string>
    <string name="dis10">Price</string>
    <string name="dis11">Quantity</string>
    <string name="dis12">Profit</string>

    <string name="btnmenu">Category</string>
    <string name="btnmenu1">Sale</string>

    <string name="bind1">Service Name</string>
    <string name="bind2">Category</string>
    <string name="bind3">Cost Price</string>
    <string name="bind4">Selling Price</string>
    <string name="bind5">Quantity</string>
    <string name="bind6">Service Name</string>
    <string name="bind7">Category</string>
    <string name="bind8">Cost Price</string>
    <string name="bind9">Selling Price</string>
    <string name="bind10">Quantity</string>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="tilde">~</string>

    <string name="textadd1">Service Name</string>
    <string name="textadd2">Service Code</string>
    <string name="textadd3">Cost Price</string>
    <string name="textadd4">Selling Price</string>
    <string name="textadd5">Quantity</string>
    <string name="textadd6">Service Name</string>
    <string name="btnadd1">Add Service</string>

    <string name="btnFax">Fax</string>
    <string name="btnCalls">Call</string>
    <string name="btnFCHistory">History</string>

    <string name="btnAddFax">Add</string>
    <string name="btnAllFax">Select ALL</string>
    <string name="btnUpdateFax">Update</string>
    <string name="btnDeleteFax">Delete</string>

    <string name="btnAddCall">Add</string>
    <string name="btnAllCall">Selete All</string>
    <string name="btnUpdateCall">Update</string>
    <string name="btnDeleteCall">Delete</string>

    <string name="title_activity_fchistory">FCHistory</string>
    <string name="logo_launch">Logo_launch</string>
    <string name="the_stationery_manager">The Stationery Manager</string>
    <string name="update">Update</string>

    <string name="btnSList">View</string>
    <string name="set1">Binding</string>
    <string name="set4">PrintOuts</string>
    <string name="set3">Laminating</string>
    <string name="set2">PhotoCopy</string>
    <string name="textsale">Profit</string>
    <string name="button3">Date</string>

    //Conflict Resolved strings
    <string name="SAbtn">Sales List</string>
    <string name="SAbtn11">Update Sale</string>

    <string name="txtDate">Date Here</string>
    <string name="txtName">Name</string>
    <string name="txtCode">Code</string>
    <string name="txtPrice">Price</string>
    <string name="txtQty">qty</string>
    <string name="txtTot">Total</string>
    <string name="txtSel">Total Price :</string>


</resources>
