<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_stationery"
        android:icon="@drawable/ic_stationery"
        android:title="@string/title_stationery"
        />

    <item
        android:id="@+id/navigation_printing"
        android:icon="@drawable/ic_print"
        android:title="@string/title_printing"/>

    <item
        android:id="@+id/navigation_faxAndCalls"
        android:icon="@drawable/ic_faxandcalls"
        android:title="@string/title_faxAndCalls"/>

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_expenses"
        android:title="@string/title_expenses"/>

</menu>
