<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls"
        tools:context=".AddExpenses">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/date"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editText_Date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_Date"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/imageCalender"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageCalender"
            android:layout_width="40dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/set_date"
            app:layout_constraintBottom_toBottomOf="@+id/editText_Date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toEndOf="@+id/editText_Date"
            app:layout_constraintTop_toTopOf="@+id/editText_Date"
            app:srcCompat="@drawable/ic_calender" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="52dp"
            android:text="@string/time"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editText_Time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editText_Time"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="time"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/imageTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageTime"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/set_time"
            app:layout_constraintBottom_toBottomOf="@+id/editText_Time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText_Time"
            app:layout_constraintVertical_bias="0.769"
            app:srcCompat="@drawable/ic_clock" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="244dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/type"
            android:textSize="18sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view1" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/repair"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/transport"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/legal"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/rent"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/other"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button12"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/electricity"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button11"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button11" />

        <Button
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/ads"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button13"
            app:layout_constraintEnd_toStartOf="@+id/button12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button13" />

        <Button
            android:id="@+id/btnNewType4"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnNewType3"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnNewType3"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnNewType2"
            app:layout_constraintEnd_toStartOf="@+id/btnNewType4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNewType2" />

        <Button
            android:id="@+id/btnNewType2"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnNewType1"
            app:layout_constraintEnd_toStartOf="@+id/btnNewType3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNewType1" />

        <Button
            android:id="@+id/btnNewType1"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button13"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tax"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/btnAddNewType"
            android:layout_width="83dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/new_type"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/view1"
            app:layout_constraintEnd_toStartOf="@+id/btnAddNewType"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNewType1"
            app:layout_constraintVertical_bias="0.307"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/update_the_selected_expense_type"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_update"

            />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/delete_the_selected_expense_type"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:srcCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/note"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editText7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/amount"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editText5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <Button
            android:id="@+id/btnSaveNewExpense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>