<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="8dp">
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:text=" Date   : "
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtDate"
                    android:text="@string/txtDate"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text=" Code  : "
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtCode"
                    android:text="@string/txtCode"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text=" Name : "
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtName"
                    android:text="@string/txtName"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text=" Price  : "
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtPrice"
                    android:text="@string/txtPrice"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/editSSalesBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="130dp"
                    android:layout_marginLeft="300dp"
                    android:background="@color/colorPrimary"
                    android:text="Edit"
                    app:srcCompat="@drawable/ic_update" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text=" Quantity  :  "
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txtQty"
                    android:text="@string/txtQty"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/deleteSSalesBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                    android:layout_marginStart="130dp"
                    android:layout_marginLeft="300dp"
                android:background="@color/colorAccent"
                android:text="Delete"
                app:srcCompat="@drawable/ic_delete" />

            </TableRow>

        </TableLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>

